--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,8 @@
     <style name="Base.Theme.Api_fun" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="cardElevation">12dp</item>
+        <item name="cardCornerRadius">12dp</item>
     </style>
 
     <style name="Theme.Api_fun" parent="Base.Theme.Api_fun" />
